final work for milestone

--- a/watch.html/products.html
+++ b/watch.html/products.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylem.css">
     <link rel="stylesheet" href="watch.html">
     <link rel="stylesheet" href="script.js">
+    <link rel="stylesheet" href="research.html">
     <script src="script.js"></script></head>
 <header>
     <div class="container">
@@ -14,9 +15,9 @@
             <ul class="navlist">
                 <li><a href="watch.html" class="navlinks">Home</a></li>
                 <li><a href="products.html" class="navlinks active">Products</a></li>
-                <li><a href="#" class="navlinks">Research</a></li>
-                <li><a href="#" class="navlinks">Blog</a></li>
-                <li><a href="#" class="navlinks">About Us</a></li>
+                <li><a href="research.html" class="navlinks">Research</a></li>
+                <li><a href="blog.html" class="navlinks">Blog</a></li>
+                <li><a href="aboutus.html" class="navlinks">About Us</a></li>
             </ul>
 
             <button class="hamburger" aria-label="Menu" aria-expanded="false">
