--- a/watch.html/watch.html
+++ b/watch.html/watch.html
@@ -8,6 +8,9 @@
     <title>EternaTimes</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="products.html">
+    <link rel="stylesheet" href="research.html">
+    <link rel="stylesheet" href="blog.html">
+    <link rel="stylesheet" href="aboutus.html">
 </head>
 <body>
     <div class="main-container bg-silver">
@@ -19,9 +22,9 @@
                     <ul class="navlist">
                         <li><a href="#" class="navlinks active">Home</a></li>
                         <li><a href="products.html" class="navlinks">Products</a></li>
-                        <li><a href="#" class="navlinks">Research</a></li>
-                        <li><a href="#" class="navlinks">Blog</a></li>
-                        <li><a href="#" class="navlinks">About Us</a></li>
+                        <li><a href="research.html" class="navlinks">Research</a></li>
+                        <li><a href="blog.html" class="navlinks">Blog</a></li>
+                        <li><a href="aboutus.html" class="navlinks">About Us</a></li>
                     </ul>
 
                     <!-- Hamburger Menu for Mobile Devices -->
