--- a/watch.html/aboutus.html
+++ b/watch.html/aboutus.html
@@ -25,6 +25,7 @@
                     <li><a href="research.html" class="navlinks">Research</a></li>
                     <li><a href="blog.html" class="navlinks">Blog</a></li>
                     <li><a href="aboutus.html" class="navlinks active">About Us</a></li>
+                    <li><a href="contact.html" class="navlinks">Contact Us</a></li>
                 </ul>
 
                 <!-- Hamburger Menu for Mobile Devices -->
@@ -253,22 +254,34 @@
         }
     </script>
 
+    <!-- Popup Modal -->
+    <div id="popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <p>Your information has been submitted successfully!</p>
+        </div>
+    </div>
+
+    
+
+ <!--Footer Starts-->
 
 <footer class="footer bg-darktan">
     <div class="container">
-        <p>&copy; 2025 EternaTimes. All rights reserved.</p>
-        <ul class="footer-links">
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Service</a></li>
-            <li><a href="#">Contact Us</a></li>
-        </ul>
-        <p>Follow us on:
-            <a href="#" aria-label="Facebook">Facebook</a> |
-            <a href="#" aria-label="Twitter">Twitter</a> |
-            <a href="#" aria-label="Instagram">Instagram</a>
-        </p>
+    <p>&copy; 2025 EternaTimes. All rights reserved.</p>
+    <ul class="footer-links">
+    <li><a href="research.css">Privacy Policy</a></li>
+    <li><a href="blog.html">Terms of Service</a></li>
+    <li><a href="aboutus.html">Contact Us</a></li>
+    </ul>
+    <p>Follow us on:
+    <a href="https://www.facebook.com/" aria-label="Facebook">Facebook</a> |
+    <a href="https://x.com/?lang=en&mx=2" aria-label="Twitter">Twitter</a> |
+    <a href="https://www.instagram.com/" aria-label="Instagram">Instagram</a>
+    </p>
     </div>
 </footer>
+    <!--Footer Ends-->
 
 
 </body>
